parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    THEN

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     program -> MAIN LRB RRB block
Rule 3     declist -> dec declist1
Rule 4     declist -> dec
Rule 5     declist1 -> dec declist1
Rule 6     declist1 -> dec
Rule 7     dec -> vardec
Rule 8     dec -> funcdec
Rule 9     type -> INTEGER
Rule 10    type -> FLOAT
Rule 11    type -> BOOLEAN
Rule 12    iddec -> ID
Rule 13    iddec -> ID LSB exp RSB
Rule 14    iddec -> ID ASSIGN exp
Rule 15    idlist -> iddec idlist1
Rule 16    idlist1 -> <empty>
Rule 17    idlist1 -> COMMA iddec idlist1
Rule 18    vardec -> type idlist SEMICOLON
Rule 19    funcdec -> type ID LRB paramdecs RRB block
Rule 20    funcdec -> VOID ID LRB paramdecs RRB block
Rule 21    paramdecs -> paramdecslist
Rule 22    paramdecs -> <empty>
Rule 23    paramdecslist -> paramdec paramdecslist1
Rule 24    paramdecslist1 -> COMMA paramdec paramdecslist1
Rule 25    paramdecslist1 -> <empty>
Rule 26    paramdec -> type ID
Rule 27    paramdec -> type ID LSB RSB
Rule 28    varlist -> vardec varlist
Rule 29    varlist -> <empty>
Rule 30    block -> LCB varlist stmtlist RCB
Rule 31    block -> LCB varlist RCB
Rule 32    stmtlist -> stmt stmtlist
Rule 33    stmtlist -> stmt
Rule 34    lvalue -> ID
Rule 35    lvalue -> ID LSB exp RSB
Rule 36    stmt -> simpstmt
Rule 37    simpstmt -> RETURN exp SEMICOLON
Rule 38    simpstmt -> exp SEMICOLON
Rule 39    simpstmt -> block
Rule 40    simpstmt -> WHILE LRB exp RRB stmt
Rule 41    simpstmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 42    stmt -> ifnoelse
Rule 43    stmt -> ifwithelse
Rule 44    ifnoelse -> IF LRB exp RRB stmt
Rule 45    ifnoelse -> IF LRB exp RRB elseiflist
Rule 46    ifnoelse -> IF LRB exp RRB simpstmt elseiflist
Rule 47    ifwithelse -> IF LRB exp RRB simpstmt elseiflist ELSE stmt
Rule 48    ifwithelse -> IF LRB exp RRB simpstmt ELSE simpstmt
Rule 49    simpstmt -> PRINT LRB ID RRB SEMICOLON
Rule 50    elseiflist -> ELIF LRB exp RRB stmt elseiflist
Rule 51    elseiflist -> ELIF LRB exp RRB stmt
Rule 52    exp -> lvalue ASSIGN exp
Rule 53    exp -> exp operator exp
Rule 54    exp -> exp op1 exp
Rule 55    exp -> exp relop exp
Rule 56    exp -> const
Rule 57    exp -> lvalue
Rule 58    exp -> ID LRB explist RRB
Rule 59    exp -> ID LRB RRB
Rule 60    exp -> LRB exp RRB
Rule 61    exp -> SUB exp
Rule 62    exp -> NOT exp
Rule 63    explist -> exp
Rule 64    explist -> exp COMMA explist
Rule 65    operator -> op1
Rule 66    op1 -> OR
Rule 67    op1 -> AND
Rule 68    operator -> SUM
Rule 69    operator -> SUB
Rule 70    operator -> MUL
Rule 71    operator -> DIV
Rule 72    operator -> REMAINDER
Rule 73    const -> INTEGERNUMBER
Rule 74    const -> FLOATNUMBER
Rule 75    const -> FALSE
Rule 76    const -> TRUE
Rule 77    relop -> GT
Rule 78    relop -> LT
Rule 79    relop -> NE
Rule 80    relop -> EQ
Rule 81    relop -> LE
Rule 82    relop -> GE

Terminals, with rules where they appear

AND                  : 67
ASSIGN               : 14 52
BOOLEAN              : 11
COMMA                : 17 24 64
DIV                  : 71
ELIF                 : 50 51
ELSE                 : 47 48
EQ                   : 80
ERROR                : 
FALSE                : 75
FLOAT                : 10
FLOATNUMBER          : 74
FOR                  : 41
GE                   : 82
GT                   : 77
ID                   : 12 13 14 19 20 26 27 34 35 49 58 59
IF                   : 44 45 46 47 48
INTEGER              : 9
INTEGERNUMBER        : 73
LCB                  : 30 31
LE                   : 81
LRB                  : 1 2 19 20 40 41 44 45 46 47 48 49 50 51 58 59 60
LSB                  : 13 27 35
LT                   : 78
MAIN                 : 1 2
MUL                  : 70
NE                   : 79
NOT                  : 62
OR                   : 66
PRINT                : 49
RCB                  : 30 31
REMAINDER            : 72
RETURN               : 37
RRB                  : 1 2 19 20 40 41 44 45 46 47 48 49 50 51 58 59 60
RSB                  : 13 27 35
SEMICOLON            : 18 37 38 41 41 49
SUB                  : 61 69
SUM                  : 68
THEN                 : 
TRUE                 : 76
VOID                 : 20
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

block                : 1 2 19 20 39
const                : 56
dec                  : 3 4 5 6
declist              : 1
declist1             : 3 5
elseiflist           : 45 46 47 50
exp                  : 13 14 35 37 38 40 41 41 41 44 45 46 47 48 50 51 52 53 53 54 54 55 55 60 61 62 63 64
explist              : 58 64
funcdec              : 8
iddec                : 15 17
idlist               : 18
idlist1              : 15 17
ifnoelse             : 42
ifwithelse           : 43
lvalue               : 52 57
op1                  : 54 65
operator             : 53
paramdec             : 23 24
paramdecs            : 19 20
paramdecslist        : 21
paramdecslist1       : 23 24
program              : 0
relop                : 55
simpstmt             : 36 46 47 48 48
stmt                 : 32 33 40 41 44 47 50 51
stmtlist             : 30 32
type                 : 18 19 26 27
vardec               : 7 28
varlist              : 28 30 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) program -> . MAIN LRB RRB block
    (3) declist -> . dec declist1
    (4) declist -> . dec
    (7) dec -> . vardec
    (8) dec -> . funcdec
    (18) vardec -> . type idlist SEMICOLON
    (19) funcdec -> . type ID LRB paramdecs RRB block
    (20) funcdec -> . VOID ID LRB paramdecs RRB block
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    MAIN            shift and go to state 3
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    program                        shift and go to state 1
    declist                        shift and go to state 2
    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block

    MAIN            shift and go to state 12


state 3

    (2) program -> MAIN . LRB RRB block

    LRB             shift and go to state 13


state 4

    (3) declist -> dec . declist1
    (4) declist -> dec .
    (5) declist1 -> . dec declist1
    (6) declist1 -> . dec
    (7) dec -> . vardec
    (8) dec -> . funcdec
    (18) vardec -> . type idlist SEMICOLON
    (19) funcdec -> . type ID LRB paramdecs RRB block
    (20) funcdec -> . VOID ID LRB paramdecs RRB block
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    MAIN            reduce using rule 4 (declist -> dec .)
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    dec                            shift and go to state 14
    declist1                       shift and go to state 15
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 5

    (7) dec -> vardec .

    VOID            reduce using rule 7 (dec -> vardec .)
    INTEGER         reduce using rule 7 (dec -> vardec .)
    FLOAT           reduce using rule 7 (dec -> vardec .)
    BOOLEAN         reduce using rule 7 (dec -> vardec .)
    MAIN            reduce using rule 7 (dec -> vardec .)


state 6

    (8) dec -> funcdec .

    VOID            reduce using rule 8 (dec -> funcdec .)
    INTEGER         reduce using rule 8 (dec -> funcdec .)
    FLOAT           reduce using rule 8 (dec -> funcdec .)
    BOOLEAN         reduce using rule 8 (dec -> funcdec .)
    MAIN            reduce using rule 8 (dec -> funcdec .)


state 7

    (18) vardec -> type . idlist SEMICOLON
    (19) funcdec -> type . ID LRB paramdecs RRB block
    (15) idlist -> . iddec idlist1
    (12) iddec -> . ID
    (13) iddec -> . ID LSB exp RSB
    (14) iddec -> . ID ASSIGN exp

    ID              shift and go to state 17

    idlist                         shift and go to state 16
    iddec                          shift and go to state 18

state 8

    (20) funcdec -> VOID . ID LRB paramdecs RRB block

    ID              shift and go to state 19


state 9

    (9) type -> INTEGER .

    ID              reduce using rule 9 (type -> INTEGER .)


state 10

    (10) type -> FLOAT .

    ID              reduce using rule 10 (type -> FLOAT .)


state 11

    (11) type -> BOOLEAN .

    ID              reduce using rule 11 (type -> BOOLEAN .)


state 12

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 20


state 13

    (2) program -> MAIN LRB . RRB block

    RRB             shift and go to state 21


state 14

    (5) declist1 -> dec . declist1
    (6) declist1 -> dec .
    (5) declist1 -> . dec declist1
    (6) declist1 -> . dec
    (7) dec -> . vardec
    (8) dec -> . funcdec
    (18) vardec -> . type idlist SEMICOLON
    (19) funcdec -> . type ID LRB paramdecs RRB block
    (20) funcdec -> . VOID ID LRB paramdecs RRB block
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    MAIN            reduce using rule 6 (declist1 -> dec .)
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    dec                            shift and go to state 14
    declist1                       shift and go to state 22
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 15

    (3) declist -> dec declist1 .

    MAIN            reduce using rule 3 (declist -> dec declist1 .)


state 16

    (18) vardec -> type idlist . SEMICOLON

    SEMICOLON       shift and go to state 23


state 17

    (19) funcdec -> type ID . LRB paramdecs RRB block
    (12) iddec -> ID .
    (13) iddec -> ID . LSB exp RSB
    (14) iddec -> ID . ASSIGN exp

    LRB             shift and go to state 24
    COMMA           reduce using rule 12 (iddec -> ID .)
    SEMICOLON       reduce using rule 12 (iddec -> ID .)
    LSB             shift and go to state 25
    ASSIGN          shift and go to state 26


state 18

    (15) idlist -> iddec . idlist1
    (16) idlist1 -> .
    (17) idlist1 -> . COMMA iddec idlist1

    SEMICOLON       reduce using rule 16 (idlist1 -> .)
    COMMA           shift and go to state 28

    idlist1                        shift and go to state 27

state 19

    (20) funcdec -> VOID ID . LRB paramdecs RRB block

    LRB             shift and go to state 29


state 20

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 30


state 21

    (2) program -> MAIN LRB RRB . block
    (30) block -> . LCB varlist stmtlist RCB
    (31) block -> . LCB varlist RCB

    LCB             shift and go to state 32

    block                          shift and go to state 31

state 22

    (5) declist1 -> dec declist1 .

    MAIN            reduce using rule 5 (declist1 -> dec declist1 .)


state 23

    (18) vardec -> type idlist SEMICOLON .

    VOID            reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    INTEGER         reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    FLOAT           reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    BOOLEAN         reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    MAIN            reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    RCB             reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    RETURN          reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    WHILE           reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    FOR             reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    PRINT           reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    IF              reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    ID              reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    LRB             reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    SUB             reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    NOT             reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    LCB             reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    INTEGERNUMBER   reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    FLOATNUMBER     reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    FALSE           reduce using rule 18 (vardec -> type idlist SEMICOLON .)
    TRUE            reduce using rule 18 (vardec -> type idlist SEMICOLON .)


state 24

    (19) funcdec -> type ID LRB . paramdecs RRB block
    (21) paramdecs -> . paramdecslist
    (22) paramdecs -> .
    (23) paramdecslist -> . paramdec paramdecslist1
    (26) paramdec -> . type ID
    (27) paramdec -> . type ID LSB RSB
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    RRB             reduce using rule 22 (paramdecs -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    type                           shift and go to state 33
    paramdecs                      shift and go to state 34
    paramdecslist                  shift and go to state 35
    paramdec                       shift and go to state 36

state 25

    (13) iddec -> ID LSB . exp RSB
    (52) exp -> . lvalue ASSIGN exp
    (53) exp -> . exp operator exp
    (54) exp -> . exp op1 exp
    (55) exp -> . exp relop exp
    (56) exp -> . const
    (57) exp -> . lvalue
    (58) exp -> . ID LRB explist RRB
    (59) exp -> . ID LRB RRB
    (60) exp -> . LRB exp RRB
    (61) exp -> . SUB exp
    (62) exp -> . NOT exp
    (34) lvalue -> . ID
    (35) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . FALSE
    (76) const -> . TRUE

    ID              shift and go to state 37
    LRB             shift and go to state 41
    SUB             shift and go to state 42
    NOT             shift and go to state 43
    INTEGERNUMBER   shift and go to state 44
    FLOATNUMBER     shift and go to state 45
    FALSE           shift and go to state 46
    TRUE            shift and go to state 47

    exp                            shift and go to state 38
    lvalue                         shift and go to state 39
    const                          shift and go to state 40

state 26

    (14) iddec -> ID ASSIGN . exp
    (52) exp -> . lvalue ASSIGN exp
    (53) exp -> . exp operator exp
    (54) exp -> . exp op1 exp
    (55) exp -> . exp relop exp
    (56) exp -> . const
    (57) exp -> . lvalue
    (58) exp -> . ID LRB explist RRB
    (59) exp -> . ID LRB RRB
    (60) exp -> . LRB exp RRB
    (61) exp -> . SUB exp
    (62) exp -> . NOT exp
    (34) lvalue -> . ID
    (35) lvalue -> . ID LSB exp RSB
    (73) const -> . INTEGERNUMBER
    (74) const -> . FLOATNUMBER
    (75) const -> . FALSE
    (76) const -> . TRUE

    ID              shift and go to state 37
    LRB             shift and go to state 41
    SUB             shift and go to state 42
    NOT             shift and go to state 43
    INTEGERNUMBER   shift and go to state 44
    FLOATNUMBER     shift and go to state 45
    FALSE           shift and go to state 46
    TRUE            shift and go to state 47

    exp                            shift and go to state 48
    lvalue                         shift and go to state 39
    const                          shift and go to state 40

state 27

    (15) idlist -> iddec idlist1 .

    SEMICOLON       reduce using rule 15 (idlist -> iddec idlist1 .)


state 28

    (17) idlist1 -> COMMA . iddec idlist1
    (12) iddec -> . ID
    (13) iddec -> . ID LSB exp RSB
    (14) iddec -> . ID ASSIGN exp

    ID              shift and go to state 50

    iddec                          shift and go to state 49

state 29

    (20) funcdec -> VOID ID LRB . paramdecs RRB block
    (21) paramdecs -> . paramdecslist
    (22) paramdecs -> .
    (23) paramdecslist -> . paramdec paramdecslist1
    (26) paramdec -> . type ID
    (27) paramdec -> . type ID LSB RSB
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    RRB             reduce using rule 22 (paramdecs -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    paramdecs                      shift and go to state 51
    paramdecslist                  shift and go to state 35
    paramdec                       shift and go to state 36
    type                           shift and go to state 33

state 30

    (1) program -> declist MAIN LRB RRB . block
    (30) block -> . LCB varlist stmtlist RCB
    (31) block -> . LCB varlist RCB

    LCB             shift and go to state 32

    block                          shift and go to state 52

state 31

    (2) program -> MAIN LRB RRB block .

    $end            reduce using rule 2 (program -> MAIN LRB RRB block .)


state 32

    (30) block -> LCB . varlist stmtlist RCB
    (31) block -> LCB . varlist RCB
    (28) varlist -> . vardec varlist
    (29) varlist -> .
    (18) vardec -> . type idlist SEMICOLON
    (9) type -> . INTEGER
    (10) type -> . FLOAT
    (11) type -> . BOOLEAN

    RCB             reduce using rule 29 (varlist -> .)
    RETURN          reduce using rule 29 (varlist -> .)
    WHILE           reduce using rule 29 (varlist -> .)
    FOR             reduce using rule 29 (varlist -> .)
    PRINT           reduce using rule 29 (varlist -> .)
    IF              reduce using rule 29 (varlist -> .)
    ID              reduce using rule 29 (varlist -> .)
    LRB             reduce using rule 29 (varlist -> .)
    SUB             reduce using rule 29 (varlist -> .)
    NOT             reduce using rule 29 (varlist -> .)
    LCB             reduce using rule 29 (varlist -> .)
    INTEGERNUMBER   reduce using rule 29 (varlist -> .)
    FLOATNUMBER     reduce using rule 29 (varlist -> .)
    FALSE           reduce using rule 29 (varlist -> .)
    TRUE            reduce using rule 29 (varlist -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    varlist                        shift and go to state 53
    vardec                         shift and go to state 54
    type                           shift and go to state 55

state 33

    (26) paramdec -> type . ID
    (27) paramdec -> type . ID LSB RSB

    ID              shift and go to state 56


state 34

    (19) funcdec -> type ID LRB paramdecs . RRB block

    RRB             shift and go to state 57


state 35

    (21) paramdecs -> paramdecslist .

    RRB             reduce using rule 21 (paramdecs -> paramdecslist .)


state 36

    (23) paramdecslist -> paramdec . paramdecslist1
    (24) paramdecslist1 -> . COMMA paramdec paramdecslist1
    (25) paramdecslist1 -> .

    COMMA           shift and go to state 59
    RRB             reduce using rule 25 (paramdecslist1 -> .)

    paramdecslist1                 shift and go to state 58

state 37

    (58) exp -> ID . LRB explist RRB
    (59) exp -> ID . LRB RRB
    (34) lvalue -> ID .
    (35) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 60
    ASSIGN          reduce using rule 34 (lvalue -> ID .)
    RSB             reduce using rule 34 (lvalue -> ID .)
    SUM             reduce using rule 34 (lvalue -> ID .)
    SUB             reduce using rule 34 (lvalue -> ID .)
    MUL             reduce using rule 34 (lvalue -> ID .)
    DIV             reduce using rule 34 (lvalue -> ID .)
    REMAINDER       reduce using rule 34 (lvalue -> ID .)
    OR              reduce using rule 34 (lvalue -> ID .)
    AND             reduce using rule 34 (lvalue -> ID .)
    GT              reduce using rule 34 (lvalue -> ID .)
    LT              reduce using rule 34 (lvalue -> ID .)
    NE              reduce using rule 34 (lvalue -> ID .)
    EQ              reduce using rule 34 (lvalue -> ID .)
    LE              reduce using rule 34 (lvalue -> ID .)
    GE              reduce using rule 34 (lvalue -> ID .)
    COMMA           reduce using rule 34 (lvalue -> ID .)
    SEMICOLON       reduce using rule 34 (lvalue -> ID .)
    RRB             reduce using rule 34 (lvalue -> ID .)
    LSB             shift and go to state 61


state 38

    (13) iddec -> ID LSB exp . RSB
    (53) exp -> exp . operator exp
    (54) exp -> exp . op1 exp
    (55) exp -> exp . relop exp
    (65) operator -> . op1
    (68) operator -> . SUM
    (69) operator -> . SUB
    (70) operator -> . MUL
    (71) operator -> . DIV
    (72) operator -> . REMAINDER
    (66) op1 -> . OR
    (67) op1 -> . AND
    (77) relop -> . GT
    (78) relop -> . LT
    (79) relop -> . NE
    (80) relop -> . EQ
    (81) relop -> . LE
    (82) relop -> . GE

    RSB             shift and go to state 62
    SUM             shift and go to state 66
    SUB             shift and go to state 67
    MUL             shift and go to state 68
    DIV             shift and go to state 69
    REMAINDER       shift and go to state 70
    OR              shift and go to state 71
    AND             shift and go to state 72
    GT              shift and go to state 73
    LT              shift and go to state 74
    NE              shift and go to state 75
    EQ              shift and go to state 76
    LE              shift and go to state 77
    GE              shift and go to state 78

    operator                       shift and go to state 63
